--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^0.27.2"
+  },
   "description": "Search for dogs",
   "devDependencies": {
     "@ridedott/eslint-config": "^1.0.0",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^25.1.2",
     "@types/webpack-env": "^1.15.1",
     "autoprefixer": "^9.7.4",
