--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,32 @@
 {
   "compilerOptions": {
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "alwaysStrict": true,
-    "charset": "utf-8",
-    "declaration": false,
-    "declarationMap": false,
-    "importHelpers": true,
-    "lib": ["DOM", "DOM.Iterable", "ES2019"],
-    "module": "commonjs",
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react",
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "pretty": true,
-    "rootDir": "src",
-    "strict": true,
     "strictNullChecks": true,
     "target": "es2019",
-    "typeRoots": ["./@types", "node_modules/@types"],
+    "typeRoots": ["./src/@types", "node_modules/@types"],
     "experimentalDecorators": true,
     "incremental": true,
-    "resolveJsonModule": true,
     "sourceMap": true,
-    "tsBuildInfoFile": "./.cache/typescript"
+    "tsBuildInfoFile": "./.cache/typescript",
+    "importHelpers": true
   },
-  "files": ["./src/index.ts"],
-  "include": ["./**/*"]
+  "include": ["src"]
 }
