--- a/.gitignore
+++ b/.gitignore
@@ -30,11 +30,19 @@ node_modules
 # dotenv environment variables file
 .env
 
-# MacOS-specific files
+# testing
+/coverage
+
+# production
+/build
+
+# misc
 .DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Build output
-lib
-
-# webpack output folder
-dist
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
