--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -20,3 +20,4 @@ rules:
   '@typescript-eslint/explicit-function-return-type': 'off'
   '@typescript-eslint/explicit-module-boundary-types': 'off'
   '@typescript-eslint/typedef': 'off'
+  'unicorn/prevent-abbreviations': 'off'
