--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.24",
     "@types/redux": "^3.6.0",
+    "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
-    "typescript": "^4.7.4",
-    "axios": "^0.27.2",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
     "@ridedott/eslint-config": "^1.0.0",
