add drag and drop

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -7,6 +7,9 @@ overrides:
   - files: ./src/**/*spec.ts*
     rules:
       '@typescript-eslint/no-magic-numbers': 'off'
+  - files: ./src/**/*.tsx
+    rules:
+      '@typescript-eslint/no-unused-vars': 'off'
 parserOptions:
   ecmaVersion: 10
   project: tsconfig.json
@@ -20,4 +23,4 @@ rules:
   '@typescript-eslint/explicit-function-return-type': 'off'
   '@typescript-eslint/explicit-module-boundary-types': 'off'
   '@typescript-eslint/typedef': 'off'
-  'unicorn/prevent-abbreviations': 'off'
+  unicorn/prevent-abbreviations: 'off'
