--- a/package.json
+++ b/package.json
@@ -73,10 +73,7 @@
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   },
-  "engines": {
-    "node": "12",
-    "npm": ">=6.13.4"
-  },
+  "engines": { "node": "v14.18.1", "npm": "8.3.0" },
   "files": [
     "src"
   ],
