--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
+    "serve": "serve -s build",
     "test": "jest",
     "types": "tsc --noEmit"
   },
@@ -41,6 +42,7 @@
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "serve": "^14.0.1",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
@@ -73,7 +75,10 @@
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   },
-  "engines": { "node": "v14.18.1", "npm": "8.3.0" },
+  "engines": {
+    "node": "v14.18.1",
+    "npm": "8.3.0"
+  },
   "files": [
     "src"
   ],
